using UnityEngine;

public class UnitAnimationParams
{
    public static readonly int IS_WALKING = Animator.StringToHash("IsWalking");
    public static readonly int IS_TYPING = Animator.StringToHash("IsTyping");
    public static readonly int ON_UNIT_SPAWN = Animator.StringToHash("OnUnitSpawn");
}
